# smartbot-ai-api-v3

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  smartbot-openapi.spec.yaml
.github/workflows/: deploy_api_service.yaml  deploy_backend_service.yaml  deploy_to_cloud_run.yaml
app/: constant.py  conversation.py  main.py  models.py
app/agents/assistant/: agent.py  parser.py  prompt.py  tools.py
app/agents/human_hand_off/: agent.py  parser.py  prompt.py  tools.py
app/agents/introduction/: chain.py
app/agents/knowlege_base/: agent.py  tools.py
app/agents/order/: parser.py  prompt.py
app/agents/order/tickets/: agent.py  index.py  parser.py  prompt.py
app/agents/order/track/: agent.py  parser.py  prompt.py  tools.py
app/agents/product/search/: agent.py  parser.py  prompt.py  tools.py
app/agents/team_selection/: chain.py
app/agents/tickets/create/: agent.py  parser.py  prompt.py  tools.py  utils.py
app/agents/tickets/status/: agent.py  parser.py  prompt.py  utils.py
app/lib/: db.py
app/loaders/: shopify.py
app/models/: __init__.py
app/services/agents/: __init__.py  get_business_agents.py  talk_to_agent.py
app/services/businesses/: __init__.py  get_business_and_chat_platform.py  get_chat_customer.py
app/services/customers/: __init__.py  get_customer.py  subscription.py  update_customer.py
app/services/store_platforms/: __init__.py
app/services/tickets/: __init__.py  create_ticket.py  get_ticket.py
app/template/: custom_template.py
app/utils/: create_search_index.py  llm.py  memory.py  smartbotapi-v2.code-workspace
(+4 files in other folders)
